---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var s : real\nput : s,  1\n"
---
"s"@(FileId(1), 4..5) [ConstVar(Var, No)]: real
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 19..20): mismatched types
| note for (FileId(1), 19..20): this is of type `real`
| info: `real` is not an integer type
